Added supervisor node

--- a/project.ipynb
+++ b/project.ipynb
@@ -159,16 +159,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "31bd56de-8899-436c-8e86-3566ecfda125",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Work\\project\\project\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langgraph.graph import START, StateGraph, END\n",
     "from pydantic import BaseModel, Field\n",
-    "from typing import Optional, List, Dict, Sequence, Any\n",
+    "from typing import Optional, List, Dict, Sequence, Any, Literal\n",
     "from typing_extensions import TypedDict\n",
     "from langchain_openai import ChatOpenAI\n",
+    "from langgraph.types import Command\n",
+    "from enum import Enum\n",
     "\n",
     "from sentence_transformers import SentenceTransformer\n",
     "import pandas as pd\n",
@@ -177,6 +188,8 @@
     "\n",
     "import sys\n",
     "import os, getpass\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
     "def _set_env(var: str):\n",
     "    if not os.environ.get(var):\n",
@@ -207,10 +220,47 @@
     "class Input(TypedDict):\n",
     "    user_query: str\n",
     "    symptoms: Optional[List[str]] = None\n",
-    "    diagnosis: Optional[str] = None\n",
+    "    final_answer: Optional[str] = None\n",
     "    diseases: Optional[str] = None\n",
     "\n",
+    "class Source(str, Enum):\n",
+    "    Medical_Query = \"Medical Query\"\n",
+    "    Generic = \"Generic\"\n",
+    "\n",
     "base_model = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
+    "\n",
+    "def supervisor(input : Input)-> Command[Literal[\"Analysis\", \"Help Desk\"]]:\n",
+    "    class LLMOutput(TypedDict):\n",
+    "        category: Source\n",
+    "    system_msg = \"\"\"You are a supervisor routing user query. You have to analyze the provided user query and decide where to route the user query by deciding the category of the query, keeping the following instructions in mind:\n",
+    "                 1. If the user query is requesting for medical assistance or diagnosis related to their symptoms, then assign the category as Medical Query.\n",
+    "                 2. If the user query is of any type other than specified above, then assign the category as Generic.\n",
+    "                 Return as output the category of the user query, which is one of [Medical Query, Generic]\n",
+    "                 \"\"\"\n",
+    "    messages = [\n",
+    "        (\"system\", system_msg),\n",
+    "        (\"user\", input[\"user_query\"])\n",
+    "    ]\n",
+    "    response = base_model.with_structured_output(LLMOutput).invoke(messages)\n",
+    "    print(response)\n",
+    "    if response[\"category\"] == \"Medical Query\":\n",
+    "        return Command(goto=\"Analysis\", update={\n",
+    "        \"user_query\":  input[\"user_query\"]\n",
+    "       })\n",
+    "    return Command(goto=\"Help Desk\", update={\n",
+    "        \"user_query\":  input[\"user_query\"]\n",
+    "    })\n",
+    "\n",
+    "def help_desk(input : Input):\n",
+    "    system_msg = \"\"\"You are an expert medical examiner. You have been provided a generic user query. You have to return a short and brief response explaining to the user that their query can't be answered, and that they should inquire about medical diagnosis instead\"\"\"\n",
+    "    messages = [\n",
+    "        (\"system\", system_msg),\n",
+    "        (\"user\", input[\"user_query\"])\n",
+    "    ]\n",
+    "    response  = base_model.invoke(ChatPromptTemplate.from_messages(messages).invoke({}))\n",
+    "    return {\n",
+    "        \"final_answer\": response.content\n",
+    "    }\n",
     "\n",
     "def analysis(input : Input):\n",
     "    class LLMOutput(TypedDict):\n",
@@ -246,16 +296,18 @@
     "    }))\n",
     "    return{\n",
     "        \"diseases\": diseases,\n",
-    "        \"diagnosis\": response.content\n",
+    "        \"final_answer\": response.content\n",
     "    }\n",
-    "\n",
     "\n",
     "builder = StateGraph(Input)\n",
     "\n",
     "builder.add_node(\"Analysis\", analysis)\n",
     "builder.add_node(\"Diagnosis\", diagnosis)\n",
+    "builder.add_node(\"Help Desk\", help_desk)\n",
+    "builder.add_node(\"Supervisor\", supervisor)\n",
     "\n",
-    "builder.add_edge(START, \"Analysis\")\n",
+    "builder.add_edge(START, \"Supervisor\")\n",
+    "builder.add_edge(\"Help Desk\", END)\n",
     "builder.add_edge(\"Analysis\", \"Diagnosis\")\n",
     "builder.add_edge(\"Diagnosis\", END)\n",
     "\n",
@@ -264,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c3d58330-2b30-4167-ae8f-8d7f8cc1e000",
    "metadata": {},
    "outputs": [
@@ -272,6 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'category': 'Medical Query'}\n",
       "['tiredness', 'fever', 'chills', 'sore throat']\n"
      ]
     }
@@ -279,14 +332,14 @@
    "source": [
     "pu = MedBot.invoke(\n",
     "    {\n",
-    "        \"user_query\": \"ing really tired lately,I've been feel and I have a fever with chills. Also, my throat is sore.\"\n",
+    "        \"user_query\": \"I've been feeling really tired lately, and I have a fever with chills. Also, my throat is sore\"\n",
     "    }\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "e49d2006-af3b-491c-89bb-a89b3ae0007e",
    "metadata": {},
    "outputs": [
@@ -294,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_query': \"ing really tired lately,I've been feel and I have a fever with chills. Also, my throat is sore.\", 'symptoms': ['tiredness', 'fever', 'chills', 'sore throat'], 'diagnosis': \"Based on the symptoms you've described—feeling really tired, having a fever with chills, and a sore throat—there are several potential diagnoses to consider. Let's analyze the symptoms in relation to the diseases listed:\\n\\n1. **Leukemia**: This condition can cause fatigue and fever, but it typically presents with additional symptoms such as unexplained bruising, frequent infections, or bleeding. Your symptoms do not strongly suggest leukemia as the primary diagnosis.\\n\\n2. **Pharyngitis**: This is an inflammation of the throat that can cause a sore throat, fever, and sometimes cough. It aligns well with your symptoms, particularly the sore throat and fever.\\n\\n3. **Strep Throat**: This bacterial infection is characterized by a severe sore throat, fever, chills, and sometimes body aches. Your symptoms of fever, chills, and sore throat could indicate strep throat, especially if the sore throat is severe.\\n\\n4. **Aplastic Anemia**: This condition can cause fatigue and fever, but it is less likely given the specific symptoms you have described. It usually presents with more severe symptoms related to blood cell deficiencies.\\n\\n5. **Tracheitis**: This is an inflammation of the trachea that can cause cough and fever, but it typically presents with a hoarse voice and nasal congestion, which you have not mentioned.\\n\\n6. **Sepsis**: This is a severe response to infection that can cause chills, fever, and decreased appetite. However, it usually presents with more severe symptoms and is often associated with a known source of infection.\\n\\n7. **Flu (Influenza)**: The flu can cause body aches, chills, fever, cough, and fatigue. Your symptoms of fever, chills, and fatigue could suggest influenza, especially if you have experienced any body aches.\\n\\n8. **Abscess of the Pharynx**: This condition can cause a sore throat and fever, but it typically presents with difficulty swallowing and severe throat pain, which you have not mentioned.\\n\\n9. **Meningitis**: This is a serious condition that can cause fever, headache, and neck stiffness, along with other symptoms. Your symptoms do not strongly suggest meningitis.\\n\\n10. **Common Cold**: This typically presents with milder symptoms such as a runny nose, cough, and low-grade fever. Your symptoms seem more severe than what is typically seen with a common cold.\\n\\n### Conclusion:\\nBased on your symptoms of fatigue, fever with chills, and a sore throat, the most likely diagnoses are **pharyngitis** or **strep throat**. The presence of chills and significant fatigue may also suggest the flu. \\n\\nIt is important to consult a healthcare professional for a proper examination and possibly a throat swab to determine if you have strep throat or another infection. Early diagnosis and treatment can help alleviate your symptoms and prevent complications.\", 'diseases':                    diseases                                           symptoms\n",
+      "{'user_query': \"I've been feeling really tired lately, and I have a fever with chills. Also, my throat is sore\", 'symptoms': ['tiredness', 'fever', 'chills', 'sore throat'], 'final_answer': \"Based on your symptoms of fatigue, fever with chills, and a sore throat, there are several potential diagnoses to consider. Let's analyze the symptoms in relation to the diseases listed:\\n\\n1. **Pharyngitis**: This condition is characterized by a sore throat, fever, and can sometimes include cough and hoarseness. Your sore throat and fever align well with this diagnosis.\\n\\n2. **Strep Throat**: This is a bacterial infection that often presents with a severe sore throat, fever, chills, and general malaise. The presence of chills and a sore throat makes this a strong possibility.\\n\\n3. **Flu (Influenza)**: The flu typically presents with symptoms such as fever, chills, body aches, and sore throat. Your symptoms of fatigue and chills could indicate the flu, especially if you are experiencing body aches.\\n\\n4. **Sepsis**: While sepsis can cause fever and chills, it usually presents with more severe symptoms, including confusion, difficulty breathing, and a significant decrease in appetite. If you are not experiencing these additional severe symptoms, sepsis may be less likely.\\n\\n5. **Aplastic Anemia**: This condition can cause fatigue and fever, but it is less likely to be the cause of your sore throat. It typically presents with more systemic symptoms related to blood cell production.\\n\\n6. **Meningitis**: This condition can cause fever and chills, but it usually presents with severe headache, neck stiffness, and altered mental status. If you are not experiencing these symptoms, meningitis is less likely.\\n\\n7. **Common Cold**: While the common cold can cause a sore throat and fever, it typically does not cause significant fatigue or chills.\\n\\nGiven your symptoms, the most likely diagnoses are **Strep Throat** and **Pharyngitis**, with the **Flu** also being a strong contender. It is important to consult a healthcare professional for a proper examination and possibly a throat swab to confirm if it is strep throat, as this may require antibiotic treatment. Additionally, if your symptoms worsen or you develop new symptoms, seek medical attention promptly.\", 'diseases':                    diseases                                           symptoms\n",
       "416                leukemia  fatigue, fever, mouth pain, muscle stiffness o...\n",
       "552             pharyngitis  cough, fever, hoarse voice, sore throat, wheezing\n",
       "675            strep throat  ache all over, chills, cough, decreased appeti...\n",
