--- a/project.ipynb
+++ b/project.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c3d58330-2b30-4167-ae8f-8d7f8cc1e000",
    "metadata": {},
    "outputs": [
@@ -332,14 +332,14 @@
    "source": [
     "pu = MedBot.invoke(\n",
     "    {\n",
-    "        \"user_query\": \"I've been feeling really tired lately, and I have a fever with chills. Also, my throat is sore\"\n",
+    "        \"user_query\": \"Feeling really tired lately, and I have a fever with chills. Also, my throat is sore.\"\n",
     "    }\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e49d2006-af3b-491c-89bb-a89b3ae0007e",
    "metadata": {},
    "outputs": [
@@ -347,22 +347,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'user_query': \"I've been feeling really tired lately, and I have a fever with chills. Also, my throat is sore\", 'symptoms': ['tiredness', 'fever', 'chills', 'sore throat'], 'final_answer': \"Based on your symptoms of fatigue, fever with chills, and a sore throat, there are several potential diagnoses to consider. Let's analyze the symptoms in relation to the diseases listed:\\n\\n1. **Pharyngitis**: This condition is characterized by a sore throat, fever, and can sometimes include cough and hoarseness. Your sore throat and fever align well with this diagnosis.\\n\\n2. **Strep Throat**: This is a bacterial infection that often presents with a severe sore throat, fever, chills, and general malaise. The presence of chills and a sore throat makes this a strong possibility.\\n\\n3. **Flu (Influenza)**: The flu typically presents with symptoms such as fever, chills, body aches, and sore throat. Your symptoms of fatigue and chills could indicate the flu, especially if you are experiencing body aches.\\n\\n4. **Sepsis**: While sepsis can cause fever and chills, it usually presents with more severe symptoms, including confusion, difficulty breathing, and a significant decrease in appetite. If you are not experiencing these additional severe symptoms, sepsis may be less likely.\\n\\n5. **Aplastic Anemia**: This condition can cause fatigue and fever, but it is less likely to be the cause of your sore throat. It typically presents with more systemic symptoms related to blood cell production.\\n\\n6. **Meningitis**: This condition can cause fever and chills, but it usually presents with severe headache, neck stiffness, and altered mental status. If you are not experiencing these symptoms, meningitis is less likely.\\n\\n7. **Common Cold**: While the common cold can cause a sore throat and fever, it typically does not cause significant fatigue or chills.\\n\\nGiven your symptoms, the most likely diagnoses are **Strep Throat** and **Pharyngitis**, with the **Flu** also being a strong contender. It is important to consult a healthcare professional for a proper examination and possibly a throat swab to confirm if it is strep throat, as this may require antibiotic treatment. Additionally, if your symptoms worsen or you develop new symptoms, seek medical attention promptly.\", 'diseases':                    diseases                                           symptoms\n",
-      "416                leukemia  fatigue, fever, mouth pain, muscle stiffness o...\n",
-      "552             pharyngitis  cough, fever, hoarse voice, sore throat, wheezing\n",
-      "675            strep throat  ache all over, chills, cough, decreased appeti...\n",
-      "48          aplastic anemia  fatigue, fever, lack of growth, nausea, slurri...\n",
-      "717              tracheitis  cough, fever, hoarse voice, nasal congestion, ...\n",
-      "645                  sepsis  chills, cough, decreased appetite, difficulty ...\n",
-      "249                     flu  ache all over, chills, coryza, cough, diarrhea...\n",
-      "4    abscess of the pharynx  cough, difficulty in swallowing, fever, headac...\n",
-      "445              meningitis  ache all over, cough, fever, headache, nausea,...\n",
-      "137             common cold  chills, coryza, cough, ear pain, fever, flu-li...}\n"
+      "Based on the symptoms you've described—feeling really tired, having a fever with chills, and a sore throat—there are several potential diagnoses to consider. Let's analyze the symptoms in relation to the diseases listed:\n",
+      "\n",
+      "1. **Leukemia**: This condition can cause fatigue and fever, but it typically presents with additional symptoms such as unexplained bruising, frequent infections, or bleeding. While your symptoms could align with leukemia, they are not specific enough to suggest this diagnosis without further investigation.\n",
+      "\n",
+      "2. **Pharyngitis**: This is an inflammation of the throat that can cause a sore throat, fever, and sometimes cough. It is a common cause of sore throat and could explain your symptoms.\n",
+      "\n",
+      "3. **Strep Throat**: This bacterial infection is characterized by a severe sore throat, fever, chills, and often body aches. It is a strong contender given your sore throat and fever.\n",
+      "\n",
+      "4. **Aplastic Anemia**: This condition can cause fatigue and fever, but it usually presents with more severe symptoms like a lack of growth or slurred speech, which you have not mentioned.\n",
+      "\n",
+      "5. **Tracheitis**: This is an inflammation of the trachea that can cause cough and fever, but it typically also presents with a hoarse voice and nasal congestion, which you have not reported.\n",
+      "\n",
+      "6. **Sepsis**: This is a severe and life-threatening response to infection that can cause chills, fever, and decreased appetite. However, it usually presents with more severe symptoms and would likely require immediate medical attention.\n",
+      "\n",
+      "7. **Flu**: Influenza can cause fatigue, fever, chills, and body aches, which aligns well with your symptoms. It is a common viral infection that could explain your current state.\n",
+      "\n",
+      "8. **Abscess of the Pharynx**: This condition can cause a sore throat and fever, but it typically presents with difficulty swallowing and severe pain, which you have not indicated.\n",
+      "\n",
+      "9. **Meningitis**: This serious condition can cause fever, headache, and chills, but it usually presents with neck stiffness and other neurological symptoms, which you have not mentioned.\n",
+      "\n",
+      "10. **Common Cold**: This viral infection can cause chills, cough, and fever, but it typically presents with milder symptoms compared to what you are experiencing.\n",
+      "\n",
+      "### Conclusion:\n",
+      "Given your symptoms of fatigue, fever with chills, and a sore throat, the most likely diagnoses are **Strep Throat** and **Pharyngitis**. The flu is also a possibility, but the presence of a severe sore throat makes strep throat a strong contender. \n",
+      "\n",
+      "### Recommendation:\n",
+      "It is important to see a healthcare provider for a proper examination and possibly a throat swab to test for strep throat. Early diagnosis and treatment can help alleviate your symptoms and prevent complications. If you experience worsening symptoms or difficulty breathing, seek medical attention immediately.\n"
      ]
     }
    ],
    "source": [
-    "print(pu)"
+    "print(pu[\"final_answer\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6ac77215-611b-4146-a737-e0d728a40014",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "diseases = pu.get(\"diseases\", None)\n"
    ]
   }
  ],
