--- a/project.ipynb
+++ b/project.ipynb
@@ -49,6 +49,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "9e70f6a7-21fa-4619-91d1-cfbeec1bc1fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversion complete! Check 'disease_symptoms.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset (replace 'your_dataset.csv' with the actual file name)\n",
+    "df = pd.read_csv(\"dataset.csv\", header=None)\n",
+    "\n",
+    "# Rename the first column to 'disease' and the rest as 'symptoms'\n",
+    "df.rename(columns={0: \"disease\"}, inplace=True)\n",
+    "\n",
+    "# Melt the dataframe to convert symptom columns into rows\n",
+    "df = df.melt(id_vars=[\"disease\"], value_name=\"symptom\").drop(columns=[\"variable\"])\n",
+    "\n",
+    "# Drop NaN values in the symptom column\n",
+    "df = df.dropna()\n",
+    "\n",
+    "# Group by disease and aggregate symptoms as a unique list\n",
+    "df_grouped = df.groupby(\"disease\")[\"symptom\"].apply(lambda x: \", \".join(sorted(set(x)))).reset_index()\n",
+    "\n",
+    "# Save to a new CSV file\n",
+    "df_grouped.to_csv(\"disease_symptoms.csv\", index=False)\n",
+    "\n",
+    "print(\"Conversion complete! Check 'disease_symptoms.csv'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "d94c8f41-58c2-429d-a3e0-57c705882bdc",
    "metadata": {},
@@ -83,6 +121,14 @@
     "np.save(\"symptom_embeddings.npy\", np.vstack(df[\"embedding\"].values))\n",
     "df.to_csv(\"processed_with_embeddings.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ea2c3ec-926b-4656-ba75-4b486a5a8cc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
