--- a/project.ipynb
+++ b/project.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "d94c8f41-58c2-429d-a3e0-57c705882bdc",
    "metadata": {},
    "outputs": [
@@ -96,10 +96,7 @@
      "output_type": "stream",
      "text": [
       "D:\\Work\\project\\project\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "D:\\Work\\project\\project\\Lib\\site-packages\\huggingface_hub\\file_download.py:142: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\soume\\.cache\\huggingface\\hub\\models--sentence-transformers--all-MiniLM-L6-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -109,7 +106,7 @@
     "import numpy as np\n",
     "\n",
     "# Load processed dataset\n",
-    "df = pd.read_csv(\"processed_symptom_disease.csv\")\n",
+    "df = pd.read_csv(\"merged_dataset.csv\")\n",
     "\n",
     "# Load a pre-trained sentence transformer model\n",
     "model = SentenceTransformer(\"all-MiniLM-L6-v2\")  # Fast and accurate\n",
@@ -124,15 +121,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2ea2c3ec-926b-4656-ba75-4b486a5a8cc9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge_disease_datasets(df1, df2):\n",
+    "    # Convert disease names to lowercase for case-insensitive merging\n",
+    "    df1['diseases'] = df1['diseases'].str.lower()\n",
+    "    df2['diseases'] = df2['diseases'].str.lower()\n",
+    "    \n",
+    "    # Combine the two datasets\n",
+    "    combined = pd.concat([df1, df2], ignore_index=True)\n",
+    "    \n",
+    "    # Merge symptoms by disease\n",
+    "    merged = (\n",
+    "        combined.groupby('diseases')['symptoms']\n",
+    "        .apply(lambda x: ', '.join(sorted(set(', '.join(x).split(', ')))))\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    \n",
+    "    return merged\n",
+    "\n",
+    "df1 = pd.read_csv(\"disease_symptoms.csv\")\n",
+    "df2 = pd.read_csv(\"processed_symptom_disease.csv\")\n",
+    "\n",
+    "merged_df = merge_disease_datasets(df1, df2)\n",
+    "merged_df.to_csv(\"merged_dataset.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a05b4b73-9bf7-401e-a50a-d0118cfecc37",
    "metadata": {},
    "outputs": [],
@@ -153,23 +173,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "dacbdeb8-a0cb-4c92-9104-c02ed7aeaee0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Work\\project\\project\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The variable is a pandas DataFrame.\n"
+      "                     diseases  \\\n",
+      "438                  leukemia   \n",
+      "577               pharyngitis   \n",
+      "700              strep throat   \n",
+      "51            aplastic anemia   \n",
+      "742                tracheitis   \n",
+      "670                    sepsis   \n",
+      "260                       flu   \n",
+      "5      abscess of the pharynx   \n",
+      "467                meningitis   \n",
+      "794  white blood cell disease   \n",
+      "\n",
+      "                                              symptoms  \n",
+      "438  fatigue, fever, mouth pain, muscle stiffness o...  \n",
+      "577  cough, fever, hoarse voice, sore throat, wheezing  \n",
+      "700  ache all over, chills, cough, decreased appeti...  \n",
+      "51   fatigue, fever, lack of growth, nausea, slurri...  \n",
+      "742  cough, fever, hoarse voice, nasal congestion, ...  \n",
+      "670  chills, cough, decreased appetite, difficulty ...  \n",
+      "260  ache all over, chills, coryza, cough, diarrhea...  \n",
+      "5    cough, difficulty in swallowing, fever, headac...  \n",
+      "467  ache all over, cough, fever, headache, nausea,...  \n",
+      "794  chills, cough, diarrhea, fatigue, fever, heart...  \n"
      ]
     }
    ],
@@ -180,7 +214,7 @@
     "\n",
     "model = SentenceTransformer(\"all-MiniLM-L6-v2\")  # Fast and accurate\n",
     "\n",
-    "df = pd.read_csv(\"processed_symptom_disease.csv\")\n",
+    "df = pd.read_csv(\"merged_dataset.csv\")\n",
     "\n",
     "def retrieve_diseases(user_input, model, df, index, top_k=10):\n",
     "    # Encode user symptoms\n",
